Update visual para concordancia con web